--- a/src/assets/style/components.css
+++ b/src/assets/style/components.css
@@ -8,12 +8,17 @@
   width: 100%;
   height: 300px;
   max-height: 300px;
-  overflow: hidden;
+  opacity: 0.75;
+  background-color: #2d3444;
 }
 
 .banner-img {
-  position: absolute;
-  width:100%;
+  position: fixed;
+  z-index: -1;
+  width: 100%;
+  min-width: 900px;
+  left: 0px;
+  top: 40px;
 }
 /*-------- COMPONENTS ---------*/
 
@@ -47,8 +52,8 @@
 
 .section-template {
   padding: 30px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  /* margin-top: 20px;
+  margin-bottom: 20px; */
   color: #2d3444;
 }
 
@@ -61,21 +66,57 @@
 -> IMG
 **************************/
 .image-template {
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  box-shadow: 1px 1px 7.5px #2d3444;
-  overflow: hidden;
+
 }
 
 .profile-pic {
+  position: relative;
+  margin: auto;
+  width: 310px;
+  height: 310px;
+  border-radius: 50%;
+  background-color: #2d3444;
+  /* box-shadow: 1px 1px 7.5px #2d3444; */
+  overflow: hidden;
+}
+
+.profile-pic-img {
   display: block;
   margin-top: -25px;
   width: 100%;
 }
+
+.pic-img-container {
+  position: absolute;
+  border-radius: 50%;
+  width: 290px;
+  height: 290px;
+  top: 10px;
+  left: 10px;
+  overflow: hidden;
+}
+
+.profile-pic-top {
+  height: 50%;
+  background-color: white;
+}
+
+.profile-pic-bot {
+  height: 50%;
+  background-color: #2d3444;
+}
+
+/**************************
+-> CARD
+**************************/
+.card {
+  background-color: white;
+  box-shadow: 2px 2px 15px darkgrey;
+  border-radius: 2px;
+  width: 300px;
+  height: 500px;
+}
+
 
 /**************************
 -> MEDIA QUERY
