--- a/src/assets/style/components.css
+++ b/src/assets/style/components.css
@@ -4,18 +4,19 @@
 -> APP.vue
 **************************/
 .banner-div {
+  position: relative;
   width: 100%;
-  height: 500px;
   max-height: 500px;
   background: url('../images/code-color.png') fixed 0px 50px;
-  filter: blur(2.5px);
 }
 
 .banner-filter {
+  position: absolute;
   width: 100%;
   height: 100%;
   background-color: #2d3444;
   opacity: 0.60;
+  filter: blur(2.5px);
 }
 /*-------- COMPONENTS ---------*/
 
@@ -63,7 +64,7 @@
 -> IMG
 **************************/
 .image-template {
-
+  height: 300px;
 }
 
 .profile-pic {
@@ -118,6 +119,38 @@
   height: 500px;
 }
 
+/**************************
+-> SHAPES
+**************************/
+.circley {
+  position: absolute;
+  border-radius: 50%;
+}
+
+/**************************
+-> RESUME
+**************************/
+.resume-name-title {
+  padding-top: 90px;
+  width: 100%;
+  color: white;
+  text-align: center;
+  z-index: 1000;
+  position: sticky;
+  padding-bottom: 250px;
+}
+
+.resume-full-name {
+  font-size: 85px;
+  font-family: 'Sanchez';
+  font-weight: bold;
+}
+
+.resume-pro-title {
+  font-size: 40px;
+  font-style: italic;
+  text-decoration: underline;
+}
 
 /**************************
 -> MEDIA QUERY
