--- a/src/assets/style/components.css
+++ b/src/assets/style/components.css
@@ -153,6 +153,24 @@
 }
 
 /**************************
+-> TABS
+**************************/
+.tab-container {
+  box-shadow: 5px 5px 10px darkgrey;
+}
+.tab {
+  background-color: #2d3444;
+  color: white;
+  display: inline-block;
+  padding: 20px;
+  width: 25%;
+  text-align: center;
+}
+.current-tab {
+  background-color: white;
+  color: #2d3444;
+}
+/**************************
 -> MEDIA QUERY
 **************************/
 
