--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -15,6 +15,9 @@ a {
   text-decoration: none;
   color: white;
 }
+ul {
+	padding: 0
+}
 li {
   list-style: none;
   display: inline-block;
@@ -22,6 +25,14 @@ li {
 
 #app {
 	font-family: 'Roboto', Helvetica, Arial, sans-serif;
+}
+
+.hidden {
+	display: none;
+}
+
+.showing {
+	display: block;
 }
 
 .span-block {
