--- a/src/assets/style/components.css
+++ b/src/assets/style/components.css
@@ -14,7 +14,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #2d3444;
+  background-color: var(--main-color);
   opacity: 0.60;
   filter: blur(2.5px);
 }
@@ -25,11 +25,11 @@
 **************************/
 
 .header-router-link {
-  background-color: #2d3444;
+  background-color: var(--main-color);
   display: inline-block;
   width: 120px;
-  padding: 15px;
-  font-weight: bold;
+  padding: 10px;
+  /* font-weight: bold; */
 }
 
 .header-nav {
@@ -40,8 +40,10 @@
 }
 
 .router-link-exact-active {
-  background-color: white;
-  color: #2d3444;
+  /* background-color: var(--secondary-color); */
+  font-weight: bold;
+  border-bottom: solid 3px var(--secondary-color);
+  /* color: var(--main-color); */
 }
 
 /**************************
@@ -49,10 +51,16 @@
 **************************/
 
 .section-template {
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  max-width: 1000px;
+  border-radius: 5px;
   padding: 30px;
   /* margin-top: 20px;
   margin-bottom: 20px; */
-  color: #2d3444;
+  color: var(--main-color);
 }
 
 .section-title {
@@ -73,8 +81,8 @@
   width: 310px;
   height: 310px;
   border-radius: 50%;
-  background-color: #2d3444;
-  /* box-shadow: 1px 1px 7.5px #2d3444; */
+  background-color: var(--main-color);
+  /* box-shadow: 1px 1px 7.5px var(--main-color); */
   overflow: hidden;
 }
 
@@ -96,12 +104,12 @@
 
 .profile-pic-top {
   height: 50%;
-  background-color: white;
+  background-color: var(--secondary-color);
 }
 
 .profile-pic-bot {
   height: 50%;
-  background-color: white;
+  background-color: var(--secondary-color);
 }
 
 .half-top {
@@ -112,7 +120,7 @@
 -> CARD
 **************************/
 .card {
-  background-color: white;
+  background-color: var(--secondary-color);
   box-shadow: 2px 2px 15px darkgrey;
   border-radius: 2px;
   width: 300px;
@@ -127,13 +135,23 @@
   border-radius: 50%;
 }
 
+.logo {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: auto;
+  color: var(--secondary-color);
+  font-size: 30px;
+  background-color: var(--main-color);
+}
 /**************************
 -> RESUME
 **************************/
 .resume-name-title {
   padding-top: 90px;
   width: 100%;
-  color: white;
+  color: var(--secondary-color);
   text-align: center;
   z-index: 1000;
   position: sticky;
@@ -159,8 +177,8 @@
   box-shadow: 5px 5px 10px darkgrey;
 }
 .tab {
-  background-color: #2d3444;
-  color: white;
+  background-color: var(--main-color);
+  color: var(--secondary-color);
   display: inline-block;
   padding: 20px;
   width: 25%;
@@ -169,7 +187,7 @@
 }
 .current-tab {
   background-color: #bbc4da;
-  color: #2d3444;
+  color: var(--main-color);
   font-weight: bold;
 }
 /**************************
