Change style on homepage

--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -4,12 +4,12 @@
 	box-sizing:border-box;
 	/* BEIGE & DARK BLUE */
 	--main-color: #E8E8E8;
-	/* --secondary-color: #2d3444; */
-	--secondary-color: #273848;
+	--secondary-color: #2d3444;
+	/* --secondary-color: #273848; */
 
 	/* YELLOWISH & DARK BLUE GRAY */
 	/* really like this one*/
-	/* --main-color: #273848;  */
+	/* --main-color: #273848; */
 	/* --secondary-color: #f4f9a8; */
 	/* --secondary-color: #F2F898; */
 	/* --secondary-color: #fff; */
