--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -65,6 +65,7 @@ h1,h2,h3,h4,h5,h6 { text-align: center;}
 	display: block;
 }
 
+.pos-relative { position: relative; }
 /*clearfix hack!*/
 .row:after{
   content:"";
