--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -53,6 +53,8 @@ h1,h2,h3,h4,h5,h6 { text-align: center;}
 
 .secondary-color { color: var(--secondary-color); }
 
+.m-auto { margin: auto; }
+
 .hidden {
 	display: none;
 }
