--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -3,9 +3,12 @@
 * {
 	box-sizing:border-box;
 	line-height: 20px;
+	color: var(--yedarkblue);
 	/* BEIGE & DARK BLUE */
 	--main-color: #E8E8E8;
 	--secondary-color: #2d3444;
+	--yedarkblue: #2d3444;
+	--yeorange: #f68b7d;
 	/* --secondary-color: #273848; */
 
 	/* YELLOWISH & DARK BLUE GRAY */
