--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -8,6 +8,7 @@
 	--main-color: #E8E8E8;
 	--secondary-color: #2d3444;
 	--yedarkblue: #2d3444;
+	--yedarkblue-trans: #2d344480;
 	--yeorange: #f68b7d;
 	/* --secondary-color: #273848; */
 
