--- a/src/assets/style/main.css
+++ b/src/assets/style/main.css
@@ -9,7 +9,10 @@
 	--secondary-color: #2d3444;
 	--yedarkblue: #2d3444;
 	--yedarkblue-trans: #2d344480;
-	--yeorange: #f68b7d;
+	--yelightblue: #22a9dd;
+	--yelightgrey: #abb0b9;
+	--yeorange: #ff451e;
+	/* --yeorange: #f68b7d; */
 	/* --secondary-color: #273848; */
 
 	/* YELLOWISH & DARK BLUE GRAY */
